--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,14 @@ p {
     color: #f1f0f0;
   }
 }
+
+/* landscape */
+h3 {
+  display: none;
+}
+
+@media screen and (orientation: landscape) {
+  h3 {
+    display: block;
+  }
+}
